Chapter12/12-begin/edge-service/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polar-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: edge-service
                  port:
                    number: 80
